--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
@@ -17,6 +18,8 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
-    "pg": "^8.16.3"
+    "paytabs_pt2": "^2.0.11",
+    "pg": "^8.16.3",
+    "uuid": "^13.0.0"
   }
 }
