--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@ngrok/ngrok": "^1.5.2",
     "axios": "^1.12.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
+    "mailersend": "^2.6.0",
     "multer": "^2.0.2",
+    "ngrok": "^5.0.0-beta.2",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "paytabs_pt2": "^2.0.11",
