--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^7.3.4",
     "@mui/styled-engine-sc": "^7.3.3",
     "@mui/system": "^7.3.3",
+    "@mui/x-data-grid": "^8.19.0",
     "@mui/x-date-pickers": "^8.14.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
