--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "i18next": "^21.8.15",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
+    "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^11.18.6",
