--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node seedAdmin.js" 
+
   },
   "dependencies": {
     "@ngrok/ngrok": "^1.5.2",
