--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,14 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node seedAdmin.js" 
-
+    "seed": "node seedAdmin.js"
   },
   "dependencies": {
     "@ngrok/ngrok": "^1.5.2",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
