add try/catch to controller/modify cookie to work in production mode

--- a/server/.env.example
+++ b/server/.env.example
@@ -23,5 +23,11 @@ BACKEND_URL=http://185.164.25.144
 ZAPIER_PAYMENT_WEBHOOK_URL=your_zapier_payment_webhook_url
 ZAPIER_ITEM_DETAILS_WEBHOOK_URL=your_zapier_item_details_webhook_url
 
+NODE_ENV="development" 
+ACCESS_TOKEN_SECRET=crypto_random_bytes
+REFRESH_TOKEN_SECRET=crypto_random_bytes
+
+
+
 # -------- (Optional) Domain --------
 # DOMAIN=yourdomain.com
