--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.3",
     "mailersend": "^2.6.0",
