--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node seedAdmin.js"
+    "seed": "node seedAdmin.js",
+    "seed:data": "node seedData.js"
   },
   "dependencies": {
     "@mui/x-data-grid": "^8.25.0",
