--- a/server/.env.example
+++ b/server/.env.example
@@ -3,31 +3,43 @@
 # ===========================================
 # Copy this file to .env and fill in the values
 
+# -------- Server Configuration --------
+NODE_ENV=production
+PORT=5000
+
 # -------- Database (PostgreSQL) --------
+DB_NAME=dhallaty
 POSTGRESQL_PASSWORD=your_database_password_here
+
+# -------- URLs Configuration --------
+PROD_FRONTEND_URL=http://your-server-ip-or-domain
+PROD_BACKEND_URL=http://your-server-ip-or-domain
+
+
+# -------- JWT Secrets (generate with: node -e "require('crypto').randomBytes(64).toString('hex')") --------
+ACCESS_TOKEN_SECRET=your_access_token_secret_here
+REFRESH_TOKEN_SECRET=your_refresh_token_secret_here
 
 # -------- PayTabs Payment Gateway --------
 PAYTABS_PROFILE_ID=your_paytabs_profile_id
 PAYTABS_SERVER_KEY=your_paytabs_server_key
 PAYTABS_BASE_URL=https://secure-saudiarabia.paytabs.com/payment/request
 
-# -------- Server Configuration --------
-NODE_ENV=production
-PORT=5000
 
-# -------- URLs Configuration --------
-FRONTEND_URL=http://185.164.25.144
-BACKEND_URL=http://185.164.25.144
 
 # -------- Zapier Webhooks (for email notifications) --------
 ZAPIER_PAYMENT_WEBHOOK_URL=your_zapier_payment_webhook_url
 ZAPIER_ITEM_DETAILS_WEBHOOK_URL=your_zapier_item_details_webhook_url
 
-NODE_ENV="development" 
+
+# -------- Admin Seed Account (used by: npm run seed) --------
+ADMIN_EMAIL=your_admin_email
+ADMIN_PASSWORD=your_admin_password
+
+
+# -------- Ngrok (development only — leave empty in production) --------
+NGROK_AUTHTOKEN=your_ngrok_token
 ACCESS_TOKEN_SECRET=crypto_random_bytes
 REFRESH_TOKEN_SECRET=crypto_random_bytes
 
 
-
-# -------- (Optional) Domain --------
-# DOMAIN=yourdomain.com
