fix persistant login prod options

--- a/server/.env.example
+++ b/server/.env.example
@@ -23,7 +23,7 @@ REFRESH_TOKEN_SECRET=your_refresh_token_secret_here
 # -------- PayTabs Payment Gateway --------
 PAYTABS_PROFILE_ID=your_paytabs_profile_id
 PAYTABS_SERVER_KEY=your_paytabs_server_key
-PAYTABS_BASE_URL=https://secure-saudiarabia.paytabs.com/payment/request
+PAYTABS_BASE_URL=https://secure.paytabs.sa/payment/request
 
 
 
